# ticket94-fastapi

./: .gitignore  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 0912ac932b6d_add_user_table.py  38478a028e97_add_is_deleted_to_event.py  a6aa1d5b20d4_create_event_table.py  bc24e1e51051_rm_role_in_user_table.py
src/: config.py  database.py  main.py  models.py  schemas.py
src/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
src/event/: router.py  schemas.py  service.py
src/static/: area.html  booking.html  checkout.html  event.html  finish.html  history.html  index.html  loaderio-784b0f7ef89615181f4a079f5395d350.txt  profile.html  signin.html  signup.html
src/static/css/: area.css  booking.css  checkout.css  event-profile.css  event.css  finish.css  history.css  index.css  navbar.css  profile.css  progress.css  signin-signup.css
src/static/data/: event-list.json
src/static/scripts/: area.js  booking.js  checkout.js  event.js  fetchEvent.js  finish.js  history.js  index.js  profile.js  progress.js  signin-signup.js
