[tool.poetry]
name = "ticket94-fastapi"
version = "0.1.0"
description = ""
authors = ["YiCyun <a20034425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
psycopg2 = "^2.9.10"
alembic = "^1.14.1"
bcrypt = "^4.2.1"
python-jose = "^3.3.0"
apscheduler = "^3.11.0"
qrcode = "^8.0"
pydantic-settings = "^2.7.1"
better-exceptions = "^0.3.3"
psycopg2-binary = "^2.9.10"
ruff = "^0.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ansible = "^11.2.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
